Implement API endpoints, better exceptions
