# web-crawler-backend/src/main/java/cz/cuni/mff/web_crawler_backend/exception/ErrorResponse.java
@@ -1,0 +1,15 @@
+package cz.cuni.mff.web_crawler_backend.exception;
+
+import lombok.Data;
+
+import java.util.List;
+
+@Data
+public class ErrorResponse {
+    private List<ErrorDetail> errors;
+
+    public ErrorResponse(List<ErrorDetail> errors) {
+        this.errors = errors;
+    }
+
+}
